--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "controlkit": "^0.1.9",
     "three": "^0.87.1",
     "three.js": "^0.77.1",
-    "controlkit": "^0.1.9"
+    "when": "^3.7.8"
   },
   "paths": {},
   "devDependencies": {
